get somewhat more real arrow integration compiling